Add Pocketbook project

--- a/Excursion/index.html
+++ b/Excursion/index.html
@@ -1,12 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <link href='https://fonts.googleapis.com/css?family=Open+Sans:300' rel='stylesheet' type='text/css'>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans:300" rel="stylesheet" type="text/css">
     <link rel="stylesheet" href="style.css" />
+    <title>Excursion</title>
   </head>
 
   <body>
-
     <!-- Main section -->
     <div class="main">
       <video autoplay loop>
@@ -16,10 +18,8 @@
       <div class="content container">
         <h1>Discover hidden places in the world around you</h1>
         <a class="btn" href="#">Download Excursion</a>
-
       </div>
     </div>
-
 
     <!-- First supporting section -->
     <div class="supporting">
@@ -42,14 +42,11 @@
       </div>
     </div>
 
-
     <!-- Footer -->
     <div class="footer">
       <div class="container">
         <p>&copy; Excursion 2018</p>
-
       </div>
     </div>
-
   </body>
 </html>
